fixed spacing for member chart title

--- a/src/assets/styles/_display-table.scss
+++ b/src/assets/styles/_display-table.scss
@@ -16,6 +16,7 @@ $block-class: 'display-table';
             width: 100%;
             padding: 0.2rem;
             flex-wrap: nowrap;
+            margin-left: 0.5rem;
 
             &--inverted {
                 background-color: $blue-grey-darken-1;
@@ -59,12 +60,14 @@ $block-class: 'display-table';
 
         & &__title-align {
             @extend .display-table__header-item;
+            min-width: 10%;
+            height: 100%;
             display: flex;
             justify-content: center;
-            padding: 1rem 1.5rem;
-            align-items: center;
-            margin: auto;
-            text-align: center;
+            padding: 0.2rem 0.5rem;
+            min-width: 10%;
+            word-wrap: break-word;
+            background-co
         }
 
         & &__title-align--left {
@@ -84,8 +87,8 @@ $block-class: 'display-table';
         }
 
         & &__title {
-            word-wrap: break-word;
             font-weight: bold;
+            max-width: -webkit-fill-available;
         }
 
         & &__help-icon {
